# study_buddy

./: .gitignore  Cargo.toml  answers.txt  exam_questions.json
qdrant_storage/: raft_state.json
qdrant_storage/collections/notes/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/notes/0/segments/2a22ae03-042a-442c-8773-8c47ac0c4529/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/notes/0/segments/2fff2085-e04a-4c6c-8902-53fd62b50e4d/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/notes/0/segments/33d3d29f-b482-4d4a-9ed5-dc041158fdc5/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/notes/0/segments/6c249957-e8a5-4147-91be-e600874d8356/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/notes/0/segments/773045a3-cd6b-441d-b2ac-26b15a063e86/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/notes/0/segments/acc8be62-061f-47de-b783-9231f189ad39/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/notes/0/segments/ae8be561-92b8-4267-8abd-15103bb86b2e/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/notes/0/wal/: first-index
src/: chunk.rs  embedding.rs  extract.rs  main.rs  ollama.rs  store.rs  structs.rs
(+27 files in other folders)
