[package]
name = "study_buddy"
version = "0.1.0"
edition = "2024"

[dependencies]
pdf-extract = "0.7.3"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde_json = "1.0.140"
uuid = { version = "1" , features = ["v4"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}